--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-default sticky-top techfont" >
+    <nav class="navbar navbar-default techfont" >
         <div class="container">
         <ul class="nav navbar-nav">
             <li><a class="navbar-brand bigbrand" href="{% url 'post_list' %}">My Blog</a></li>
