--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div class="row">
-    <div class="col-lg-3 col-md-4 col-12">
+    <div class="col-3 col-md-4 col-12">
         <div class="profile">
             <img  style="margin-top:15px;border-radius: 50px;" src="{% static 'media/me1.jpg' %}" alt="sabari-profile-img">
         </div>
@@ -14,17 +14,16 @@
             <p style="margin-top:5px;margin-left:30px;">I am Web Developer.</p>
         </div>
         </div>
-          <hr style="width:30%;margin-left:23%;">
           <div class="boxicon">
-            <p style="text-align:center;margin-right: 20%;"><a style="font-size: 2em;" href="https://github.com/Sabari2002" target="_blank"><span class="iconify" data-icon="icon-park:github"></span></a><a style="font-size: 2em;color: #006192;" href="https://www.linkedin.com/in/sabari-vasan-11564b229/" target="_blank"><span class="iconify" data-icon="bx:bxl-linkedin-square"></span></a>
+            <p style="text-align: center;margin-right: 83%;"><a style="font-size: 2em;" href="https://github.com/Sabari2002" target="_blank"><span class="iconify" data-icon="icon-park:github"></span></a><a style="font-size: 2em;color: #006192;" href="https://www.linkedin.com/in/sabari-vasan-11564b229/" target="_blank"><span class="iconify" data-icon="bx:bxl-linkedin-square"></span></a>
         </p>
         </div>
       
     </div >
-    <div class="line col">
+    <!-- <div class="line col">
        <div class="vl"></div>
-    </div>
-    <div class="col-lg-8 col-md-8 col-12 ">
+    </div> -->
+    <div class="col-7 col-md-8 col-12 ">
         <div>
             {% for post in post_list %}
             <div class="postlist">
